# mutationNeuralNetwork

./: CMakeLists.txt  README.md
pybind/: pybind.cpp
src/: activationFunctions.h  connection.cpp  connection.h  enum.h  main.cpp  main.h  network.cpp  network.h  neuron.cpp  neuron.h  randomGenerator.cpp  randomGenerator.h
